--- a/STM32F723_LabGadgets/STM32F723_HighSpeed_USB_Bridge/STM32F723_HighSpeed_USB_Bridge.ioc
+++ b/STM32F723_LabGadgets/STM32F723_HighSpeed_USB_Bridge/STM32F723_HighSpeed_USB_Bridge.ioc
@@ -723,14 +723,10 @@ PH9.GPIOParameters=GPIO_Label
 PH9.GPIO_Label=CTP_RST
 PH9.Locked=true
 PH9.Signal=GPIO_Output
-PI0.GPIOParameters=GPIO_Label
-PI0.GPIO_Label=PMOD_SPI2_NSS
 PI0.Locked=true
-PI0.Signal=SPI2_NSS
-PI1.GPIOParameters=GPIO_Label
-PI1.GPIO_Label=PMOD_SPI2_SCK
+PI0.Signal=GPIO_Output
 PI1.Locked=true
-PI1.Signal=SPI2_SCK
+PI1.Signal=GPIO_Output
 PI10.Locked=true
 PI10.Signal=GPIO_Output
 PI2.GPIOParameters=GPIO_Label
