--- a/STM32F723_LabGadgets/STM32F723_HighSpeed_USB_Bridge/STM32F723_HighSpeed_USB_Bridge.ioc
+++ b/STM32F723_LabGadgets/STM32F723_HighSpeed_USB_Bridge/STM32F723_HighSpeed_USB_Bridge.ioc
@@ -57,12 +57,13 @@ KeepUserPlacement=true
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
-Mcu.IP10=UART4
-Mcu.IP11=UART7
-Mcu.IP12=USART2
-Mcu.IP13=USART3
-Mcu.IP14=USB_DEVICE
-Mcu.IP15=USB_OTG_HS
+Mcu.IP10=TIM14
+Mcu.IP11=UART4
+Mcu.IP12=UART7
+Mcu.IP13=USART2
+Mcu.IP14=USART3
+Mcu.IP15=USB_DEVICE
+Mcu.IP16=USB_OTG_HS
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
@@ -71,35 +72,35 @@ Mcu.IP6=TIM3
 Mcu.IP7=TIM5
 Mcu.IP8=TIM9
 Mcu.IP9=TIM12
-Mcu.IPNb=16
+Mcu.IPNb=17
 Mcu.Name=STM32F723I(C-E)Kx
 Mcu.Package=UFBGA176
 Mcu.Pin0=PE3
 Mcu.Pin1=PE2
 Mcu.Pin10=PD7
-Mcu.Pin100=PF13
-Mcu.Pin101=PG0
-Mcu.Pin102=PE13
-Mcu.Pin103=PH7
-Mcu.Pin104=PD12
-Mcu.Pin105=PD11
-Mcu.Pin106=PD10
-Mcu.Pin107=PA2
-Mcu.Pin108=PA6
-Mcu.Pin109=PA5
+Mcu.Pin100=PG0
+Mcu.Pin101=PE13
+Mcu.Pin102=PH7
+Mcu.Pin103=PD12
+Mcu.Pin104=PD11
+Mcu.Pin105=PD10
+Mcu.Pin106=PA2
+Mcu.Pin107=PA6
+Mcu.Pin108=PA5
+Mcu.Pin109=PC5
 Mcu.Pin11=PC12
-Mcu.Pin110=PC5
-Mcu.Pin111=PF12
-Mcu.Pin112=PF15
-Mcu.Pin113=PE8
-Mcu.Pin114=PE9
-Mcu.Pin115=PE11
-Mcu.Pin116=PE14
-Mcu.Pin117=PB12
-Mcu.Pin118=PB13
-Mcu.Pin119=PD9
+Mcu.Pin110=PF12
+Mcu.Pin111=PF15
+Mcu.Pin112=PE8
+Mcu.Pin113=PE9
+Mcu.Pin114=PE11
+Mcu.Pin115=PE14
+Mcu.Pin116=PB12
+Mcu.Pin117=PB13
+Mcu.Pin118=PD9
+Mcu.Pin119=PD8
 Mcu.Pin12=PA15
-Mcu.Pin120=PD8
+Mcu.Pin120=PA3
 Mcu.Pin121=PA7
 Mcu.Pin122=PB1
 Mcu.Pin123=PB0
@@ -111,11 +112,13 @@ Mcu.Pin128=PE12
 Mcu.Pin129=PE15
 Mcu.Pin13=PA14
 Mcu.Pin130=PB10
-Mcu.Pin131=PB14
-Mcu.Pin132=PB15
-Mcu.Pin133=VP_SYS_VS_tim1
-Mcu.Pin134=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
-Mcu.Pin135=VP_USB_HOST_VS_USB_HOST_MSC_HS
+Mcu.Pin131=PB11
+Mcu.Pin132=PB14
+Mcu.Pin133=PB15
+Mcu.Pin134=VP_SYS_VS_tim1
+Mcu.Pin135=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin136=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
+Mcu.Pin137=VP_USB_HOST_VS_USB_HOST_MSC_HS
 Mcu.Pin14=PA13
 Mcu.Pin15=PE4
 Mcu.Pin16=PE5
@@ -127,90 +130,90 @@ Mcu.Pin20=PB6
 Mcu.Pin21=PG15
 Mcu.Pin22=PG12
 Mcu.Pin23=PG10
-Mcu.Pin24=PD6
-Mcu.Pin25=PD0
-Mcu.Pin26=PC11
-Mcu.Pin27=PC10
-Mcu.Pin28=PA12
-Mcu.Pin29=PI7
+Mcu.Pin24=PD0
+Mcu.Pin25=PC11
+Mcu.Pin26=PC10
+Mcu.Pin27=PA12
+Mcu.Pin28=PI7
+Mcu.Pin29=PI6
 Mcu.Pin3=PE0
-Mcu.Pin30=PI6
-Mcu.Pin31=PI5
-Mcu.Pin32=PG9
-Mcu.Pin33=PD5
-Mcu.Pin34=PD1
-Mcu.Pin35=PI3
-Mcu.Pin36=PI2
-Mcu.Pin37=PA11
-Mcu.Pin38=PI9
-Mcu.Pin39=PI4
+Mcu.Pin30=PI5
+Mcu.Pin31=PG9
+Mcu.Pin32=PD5
+Mcu.Pin33=PD1
+Mcu.Pin34=PI3
+Mcu.Pin35=PI2
+Mcu.Pin36=PA11
+Mcu.Pin37=PI9
+Mcu.Pin38=PI4
+Mcu.Pin39=PD4
 Mcu.Pin4=PB8
-Mcu.Pin40=PD4
-Mcu.Pin41=PD3
-Mcu.Pin42=PD2
-Mcu.Pin43=PH15
-Mcu.Pin44=PI1
-Mcu.Pin45=PA10
-Mcu.Pin46=PC14-OSC32_IN
-Mcu.Pin47=PF0
-Mcu.Pin48=PI10
-Mcu.Pin49=PH13
+Mcu.Pin40=PD3
+Mcu.Pin41=PD2
+Mcu.Pin42=PH15
+Mcu.Pin43=PI1
+Mcu.Pin44=PA10
+Mcu.Pin45=PC14-OSC32_IN
+Mcu.Pin46=PF0
+Mcu.Pin47=PI10
+Mcu.Pin48=PH13
+Mcu.Pin49=PH14
 Mcu.Pin5=PB5
-Mcu.Pin50=PH14
-Mcu.Pin51=PI0
-Mcu.Pin52=PA9
-Mcu.Pin53=PC15-OSC32_OUT
-Mcu.Pin54=PH2
-Mcu.Pin55=PC9
-Mcu.Pin56=PA8
-Mcu.Pin57=PH0-OSC_IN
-Mcu.Pin58=PH3
-Mcu.Pin59=PC8
+Mcu.Pin50=PI0
+Mcu.Pin51=PA9
+Mcu.Pin52=PC15-OSC32_OUT
+Mcu.Pin53=PH2
+Mcu.Pin54=PC9
+Mcu.Pin55=PA8
+Mcu.Pin56=PH0-OSC_IN
+Mcu.Pin57=PH3
+Mcu.Pin58=PC8
+Mcu.Pin59=PC7
 Mcu.Pin6=PG14
-Mcu.Pin60=PC7
-Mcu.Pin61=PH1-OSC_OUT
-Mcu.Pin62=PF2
-Mcu.Pin63=PF1
-Mcu.Pin64=PH4
-Mcu.Pin65=PG8
-Mcu.Pin66=PC6
-Mcu.Pin67=PF3
-Mcu.Pin68=PF4
-Mcu.Pin69=PH5
+Mcu.Pin60=PH1-OSC_OUT
+Mcu.Pin61=PF2
+Mcu.Pin62=PF1
+Mcu.Pin63=PH4
+Mcu.Pin64=PG8
+Mcu.Pin65=PC6
+Mcu.Pin66=PF3
+Mcu.Pin67=PF4
+Mcu.Pin68=PH5
+Mcu.Pin69=REXTPHYHS
 Mcu.Pin7=PG13
-Mcu.Pin70=REXTPHYHS
-Mcu.Pin71=PF7
-Mcu.Pin72=PF6
-Mcu.Pin73=PF5
-Mcu.Pin74=PH12
-Mcu.Pin75=PG5
-Mcu.Pin76=PG4
-Mcu.Pin77=PG3
-Mcu.Pin78=PF10
-Mcu.Pin79=PF9
+Mcu.Pin70=PF7
+Mcu.Pin71=PF6
+Mcu.Pin72=PF5
+Mcu.Pin73=PH12
+Mcu.Pin74=PG5
+Mcu.Pin75=PG4
+Mcu.Pin76=PG3
+Mcu.Pin77=PF10
+Mcu.Pin78=PF9
+Mcu.Pin79=PF8
 Mcu.Pin8=PB4
-Mcu.Pin80=PF8
-Mcu.Pin81=PH11
-Mcu.Pin82=PH10
-Mcu.Pin83=PD15
-Mcu.Pin84=PG2
-Mcu.Pin85=PC0
-Mcu.Pin86=PC1
-Mcu.Pin87=PC2
-Mcu.Pin88=PC3
-Mcu.Pin89=PB2
+Mcu.Pin80=PH11
+Mcu.Pin81=PH10
+Mcu.Pin82=PD15
+Mcu.Pin83=PG2
+Mcu.Pin84=PC0
+Mcu.Pin85=PC1
+Mcu.Pin86=PC2
+Mcu.Pin87=PC3
+Mcu.Pin88=PB2
+Mcu.Pin89=PG1
 Mcu.Pin9=PB3
-Mcu.Pin90=PG1
-Mcu.Pin91=PH6
-Mcu.Pin92=PH8
-Mcu.Pin93=PH9
-Mcu.Pin94=PD14
-Mcu.Pin95=PD13
-Mcu.Pin96=PA1
-Mcu.Pin97=PA0-WKUP
-Mcu.Pin98=PA4
-Mcu.Pin99=PC4
-Mcu.PinsNb=136
+Mcu.Pin90=PH6
+Mcu.Pin91=PH8
+Mcu.Pin92=PH9
+Mcu.Pin93=PD14
+Mcu.Pin94=PD13
+Mcu.Pin95=PA1
+Mcu.Pin96=PA0-WKUP
+Mcu.Pin97=PA4
+Mcu.Pin98=PC4
+Mcu.Pin99=PF13
+Mcu.PinsNb=138
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F723IEKx
@@ -231,6 +234,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_2
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:3\:3\:true\:false\:true\:true\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:3\:3\:true\:false\:true\:true\:true
+NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UART7_IRQn=true\:2\:0\:true\:false\:true\:true\:false
@@ -267,6 +271,11 @@ PA2.GPIO_Label=ARD_D1_USART2_TX
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=ARD_D0_USART2_RX
+PA3.Locked=true
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=ARD_A1
 PA4.Locked=true
@@ -301,6 +310,8 @@ PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=USB_OTGFS_OVCR_INT
 PB10.Locked=true
 PB10.Signal=GPXTI10
+PB11.Locked=true
+PB11.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=USB_OTG_HS_ID
 PB12.Locked=true
@@ -460,11 +471,6 @@ PD5.GPIOParameters=GPIO_Label
 PD5.GPIO_Label=LCD_PSRAM_NWE
 PD5.Locked=true
 PD5.Signal=FMC_NWE
-PD6.GPIOParameters=GPIO_Label
-PD6.GPIO_Label=ARD_D0_USART2_RX
-PD6.Locked=true
-PD6.Mode=Asynchronous
-PD6.Signal=USART2_RX
 PD7.GPIOParameters=GPIO_Label
 PD7.GPIO_Label=PSRAM_NE1 [IS66WV51216EBLL_CS1]
 PD7.Locked=true
@@ -600,10 +606,8 @@ PF7.GPIO_PuPd=GPIO_PULLUP
 PF7.Locked=true
 PF7.Mode=Asynchronous
 PF7.Signal=UART7_TX
-PF8.GPIOParameters=GPIO_Label
-PF8.GPIO_Label=PMOD_UART7_RTS
 PF8.Locked=true
-PF8.Signal=UART7_RTS
+PF8.Signal=GPIO_Output
 PF9.GPIOParameters=GPIO_Label
 PF9.GPIO_Label=PMOD_UART7_CTS
 PF9.Locked=true
@@ -785,7 +789,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_SAI2_Init-SAI2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM5_Init-TIM5-false-HAL-true,8-MX_TIM9_Init-TIM9-false-HAL-true,9-MX_TIM12_Init-TIM12-false-HAL-true,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,11-MX_UART7_Init-UART7-false-HAL-true,12-MX_UART4_Init-UART4-false-HAL-true,13-MX_USART2_UART_Init-USART2-false-HAL-true,14-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM5_Init-TIM5-false-HAL-true,8-MX_TIM9_Init-TIM9-false-HAL-true,9-MX_TIM12_Init-TIM12-false-HAL-true,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,11-MX_UART7_Init-UART7-false-HAL-true,12-MX_UART4_Init-UART4-false-HAL-true,13-MX_USART2_UART_Init-USART2-false-HAL-true,14-MX_USART3_UART_Init-USART3-false-HAL-true,15-MX_TIM14_Init-TIM14-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
@@ -966,6 +970,10 @@ SH.S_TIM9_CH2.0=TIM9_CH2,PWM Generation2 CH2
 SH.S_TIM9_CH2.ConfNb=1
 TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM12.IPParameters=Channel-PWM Generation1 CH1
+TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM14.IPParameters=Prescaler,Period,AutoReloadPreload
+TIM14.Period=1999
+TIM14.Prescaler=21599
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
@@ -992,6 +1000,8 @@ USB_OTG_HS.IPParameters=VirtualMode
 USB_OTG_HS.VirtualMode=Int_Phy_Device
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Mode=CDC_HS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_HS
 VP_USB_HOST_VS_USB_HOST_MSC_HS.Signal=USB_HOST_VS_USB_HOST_MSC_HS
